# aha

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.en.md  README.md  README.zh-CN.md
.github/workflows/: ci.yml
docs/: CLI_USAGE.md  api.md  api.zh-CN.md  changelog.md  changelog.zh-CN.md  cli.md  cli.zh-CN.md  concepts.md  concepts.zh-CN.md  development.md  development.zh-CN.md  getting-started.md  getting-started.zh-CN.md  installation.md  installation.zh-CN.md  supported-models.md  supported-models.zh-CN.md
scripts/: download_and_run.sh
src/: api.rs  lib.rs  main.rs  process.rs
src/api/: asr.rs  asr_types.rs  mod.rs
src/chat_template/: mod.rs
src/exec/: deepseek_ocr.rs  fun_asr_nano.rs  glm_asr_nano.rs  hunyuan_ocr.rs  minicpm4.rs  mod.rs  paddleocr_vl.rs  qwen2_5vl.rs  qwen3.rs  qwen3_asr.rs  qwen3vl.rs  rmbg2_0.rs  voxcpm.rs  voxcpm1_5.rs
src/models/: mod.rs
src/models/campplus/: mod.rs
src/models/common/: gguf.rs  mod.rs
src/models/deepseek_ocr/: generate.rs  model.rs
src/models/feature_extractor/: config.rs  mod.rs
src/models/fun_asr_nano/: model.rs
src/models/glm_asr_nano/: config.rs  model.rs  processor.rs
src/models/index_tts2/: generate.rs  mod.rs  model.rs  processor.rs  utils.rs
src/models/mask_gct/: config.rs  model.rs
src/models/paddleocr_vl/: model.rs
src/models/qwen2_5vl/: generate.rs  model.rs
src/models/qwen3/: generate.rs
src/models/qwen3_5/: generate.rs  model.rs
src/models/qwen3_asr/: generate.rs  model.rs
src/models/qwen3vl/: generate.rs  model.rs  processor.rs
src/models/rmbg2_0/: generate.rs  model.rs
src/models/voxcpm/: config.rs  generate.rs  model.rs
src/models/w2v_bert_2_0/: config.rs  model.rs
src/position_embed/: rope.rs  sinusoidal_pe.rs
src/tokenizer/: mod.rs
src/utils/: audio_utils.rs  img_utils.rs  mod.rs  tensor_utils.rs
tests/: config_tests.rs  messy_test.rs  test_fun_asr_nano.rs  test_gelab_zero.rs  test_gguf_qwen3_5.rs  test_glm_asr_nano.rs  test_health_models.rs  test_index_tts2.rs  test_qwen2_5vl.rs  test_qwen3_5.rs  test_qwen3_asr.rs  test_qwen3vl.rs  test_rmbg2_0.rs  test_voxcpm.rs  test_voxcpm1_5.rs  weight_test.rs
